# sipep-liquidaciones

./: README.md  main.py  navegacion.py  pendientes.py  pyproject.toml
layouts/: Test.grid.json  compulab.grid.json  test_572.grid.json
parametros/: bases_imponibles.xlsx  f931.xlsx  ffep.xlsx  ganancias_art_94.xlsx  ganancias_deducciones_generales.xlsx  ganancias_deducciones_personales.xlsx  items_liquidacion.xlsx  scvo.xlsx  smvm.xlsx
