[project]
name = "compulab"
version = "0.1.0"
description = "Pruebas para Compulab"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "bs4>=0.0.2",
    "duckdb>=1.3.1",
    "ibis-framework[mssql]>=10.6.0",
    "lxml>=6.0.0",
    "marimo>=0.14.11",
    "openpyxl>=3.1.5",
    "polars[pyarrow]>=1.31.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
    "reportlab>=4.4.2",
    "ruff>=0.12.1",
    "sqlglot>=26.33.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
    "xlsxwriter>=3.2.5",
]
[tools.marimo.runtime]
dotenv = [".env"]
